sf-hrms/force-app/main/default/objects/Expense_Line__c/fields/Category__c.field-meta.xml
<CustomField><fullName>Category__c</fullName><label>Category</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Travel</fullName><default>false</default></value><value><fullName>Food</fullName><default>false</default></value><value><fullName>Accommodation</fullName><default>false</default></value><value><fullName>Communication</fullName><default>false</default></value><value><fullName>Office Supplies</fullName><default>false</default></value><value><fullName>Other</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>