sf-hrms/force-app/main/default/objects/Expense_Line__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><type>Text</type><length>255</length></CustomField>