sf-hrms/force-app/main/default/objects/Expense_Line__c/fields/Expense_Report__c.field-meta.xml
<CustomField><fullName>Expense_Report__c</fullName><label>Expense Report</label><type>MasterDetail</type><referenceTo>Expense_Report__c</referenceTo><relationshipLabel>Lines</relationshipLabel><relationshipName>Lines</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>