sf-hrms/force-app/main/default/objects/Expense_Line__c/fields/Receipt_URL__c.field-meta.xml
<CustomField><fullName>Receipt_URL__c</fullName><label>Receipt URL</label><type>Url</type></CustomField>